{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 94,
  "lineage": "07cc0cb2-da70-f1d4-3832-533f29e645c2",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:internet-gateway/igw-0c80e23252aaa1397",
            "id": "igw-0c80e23252aaa1397",
            "owner_id": "497852570190",
            "region": "ap-southeast-1",
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private_subnets_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:network-acl/acl-0c7e86c52d6e6a91e",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "10.0.64.0/18",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 200,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.64.0/18",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 201,
                "to_port": 8080
              },
              {
                "action": "deny",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 300,
                "to_port": 0
              }
            ],
            "id": "acl-0c7e86c52d6e6a91e",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.64.0/18",
                "from_port": 22,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 100,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.64.0/18",
                "from_port": 8080,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "tcp",
                "rule_no": 101,
                "to_port": 8080
              }
            ],
            "owner_id": "497852570190",
            "region": "ap-southeast-1",
            "subnet_ids": [
              "subnet-078158000fca7ccfd"
            ],
            "tags": null,
            "tags_all": {},
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private_subnet_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:route-table/rtb-094136c6b6f68d811",
            "id": "rtb-094136c6b6f68d811",
            "owner_id": "497852570190",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497852570190",
            "id": "rtb-094136c6b6f68d811",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public_subnet_route_tables",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:route-table/rtb-0c332802ac7d7f3e9",
            "id": "rtb-0c332802ac7d7f3e9",
            "owner_id": "497852570190",
            "propagating_vgws": [],
            "region": "ap-southeast-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c80e23252aaa1397",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497852570190",
            "id": "rtb-0c332802ac7d7f3e9",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_internet_gateway.gateway",
            "module.networking.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ffd8d3d4c522c705",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-094136c6b6f68d811",
            "subnet_id": "subnet-078158000fca7ccfd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.private_subnet_route_tables",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cc9fe62b560a8ca4",
            "region": "ap-southeast-1",
            "route_table_id": "rtb-0c332802ac7d7f3e9",
            "subnet_id": "subnet-0aeef345028c4abac"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.gateway",
            "module.networking.aws_route_table.public_subnet_route_tables",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private-instances-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:security-group/sg-0c4042f3b83d3389d",
            "description": "To allow traffic from specified ports from public instances to private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "10.0.64.0/18"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.64.0/18"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "id": "sg-0c4042f3b83d3389d",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.64.0/18"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.64.0/18"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "private instances sg",
            "name_prefix": "",
            "owner_id": "497852570190",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497852570190",
            "id": "sg-0c4042f3b83d3389d",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public-instances-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:security-group/sg-08598f5afe7828bc8",
            "description": "Only allow SSH, HTTP, and HTTPS traffic from internet to public instances and specified ports from private instances",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08598f5afe7828bc8",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/18"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/18"
                ],
                "description": "",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8080
              }
            ],
            "name": "allow-ssh-http-https",
            "name_prefix": "",
            "owner_id": "497852570190",
            "region": "ap-southeast-1",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497852570190",
            "id": "sg-08598f5afe7828bc8",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:subnet/subnet-078158000fca7ccfd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-078158000fca7ccfd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497852570190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "private-subnet-1"
            },
            "tags_all": {
              "Name": "private-subnet-1"
            },
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497852570190",
            "id": "subnet-078158000fca7ccfd",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:subnet/subnet-0aeef345028c4abac",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.64.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aeef345028c4abac",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "497852570190",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "ap-southeast-1",
            "tags": {
              "Name": "public-subnet-1"
            },
            "tags_all": {
              "Name": "public-subnet-1"
            },
            "vpc_id": "vpc-0cf52a544578bbbf2"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "497852570190",
            "id": "subnet-0aeef345028c4abac",
            "region": "ap-southeast-1"
          },
          "dependencies": [
            "module.networking.aws_vpc.main",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:497852570190:vpc/vpc-0cf52a544578bbbf2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d0696a6944b799e",
            "default_route_table_id": "rtb-0f049c792600746f2",
            "default_security_group_id": "sg-032ca241c724d0ed1",
            "dhcp_options_id": "dopt-0ab0c50fb4f7c03d0",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cf52a544578bbbf2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0f049c792600746f2",
            "owner_id": "497852570190",
            "region": "ap-southeast-1"
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}